# zml-bazel-buildzig-repro

./: .gitignore  README.md  build.zig
facade/repro/cabi/: BUILD.bazel  zml_repro_cabi.h  zml_repro_cabi.zig  zml_repro_cli.zig
scripts/: docker-run.sh  prepare-zml.sh
src/: checks.zig  main.zig
