load("@rules_zig//zig:defs.bzl", "zig_binary", "zig_shared_library")

zig_shared_library(
    name = "zml_repro_cabi",
    main = "zml_repro_cabi.zig",
    shared_lib_name = "libzml_repro_cabi.so",
    visibility = ["//visibility:public"],
    deps = ["//zml"],
)

zig_binary(
    name = "zml_repro_cli",
    main = "zml_repro_cli.zig",
    visibility = ["//visibility:public"],
    deps = ["//zml"],
)
